# jobdeck

./: .env.example  .gitignore  LICENSE  README.md  profile.example.md  pyproject.toml
.github/workflows/: ci.yml
src/jobdeck/: __init__.py  __main__.py  apply_channel.py  backup.py  config.py  constants.py  contact_resolve.py  dates.py  db.py  dedupe.py  export.py  gmail.py  migrations.py  pdf.py  scheduler.py  templates.py
src/jobdeck/ai/: __init__.py  drafting.py  llm.py  profile.py  scoring.py
src/jobdeck/services/: apply_resolve.py  autosend.py  contact_lookup.py  drafting.py  mappe.py  polling.py  scoring.py  send.py
src/jobdeck/sources/: __init__.py  arbeitnow.py  arbeitsagentur.py  base.py  jooble.py
src/jobdeck/ui/: app.py  helpers.py  layout.py
src/jobdeck/ui/pages/: applications.py  dashboard.py  jobs.py  profiles.py  queue.py  settings.py
tests/: conftest.py  test_ai.py  test_apply_channel.py  test_apply_resolve.py  test_autosend.py  test_backup.py  test_contact_lookup.py  test_contact_resolve.py  test_dates.py  test_db.py  test_dedupe.py  test_drafting.py  test_gmail.py  test_mappe.py  test_migrations.py  test_pdf.py  test_polling.py  test_queue_page.py  test_scoring_service.py  test_send_service.py  test_sources.py  test_templates.py
